--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="../images/prontocloud.png" alt="Prontocloud">
+        <img src="../html/images/prontocloud.png" alt="Prontocloud">
     </header>
 
     <section>
