--- a/html/index.html
+++ b/html/index.html
@@ -5,37 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../html/css/reset.css">
+    <link rel="stylesheet" href="../html/css/style.css">
+    <!--Icons-->
+    <link rel="shortcut icon" href="../html/images/favicon.cc">
+    <link rel="apple-touch-icon" href="../html/images/icon-touch-retina.png">
+    <link rel="apple-touch-icon" href="../html/images/icon-touch-retina-iphone.png">
+    <link rel="apple-touch-icon" href="../html/images/icon-touch-retina-ipad.png">
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
+
     <title>Prontocloud</title>
+
 </head>
 
 <body>
-    <header>
-        <img src="../html/images/prontocloud.png" alt="Prontocloud">
-    </header>
 
-    <section>
-        <nav>
+    <div class="main-container">
+
+        <header>
+            <img src="../html/images/prontocloud.png" alt="Prontocloud">
+        </header>
+
+        <section>
+            <nav>
+
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre nós</a> </li>
+                    <li><a href="#">Tenho interesse</a></li>
+                </ul>
+
+            </nav>
             <article>
 
                 <h1>Planejamento para criação de sites</h1>
+
                 <h2>Guia de criação de sites</h2>
 
                 <p>
-                    Você provavelmente está lendo aqui por que está pensando em fazer um novo site, se é a primeira vez
-                    muitas dúvidas podem surgir, e caso isso aconteça, pode entrar em contato com a gente. Mas antes
+                    Você provavelmente está lendo aqui por que está pensando em fazer um novo site, se é a primeira
+                    vez muitas dúvidas podem surgir, e caso isso aconteça, pode entrar em contato com a gente. Mas
+                    antes
                     pode avaliar cada etapa do nosso passo-a-passo:
                 </p>
 
                 <p>
-                    Construir um site confiável e profissional exige uma série de conhecimentos em algumas áreas como
-                    design, comunicação, marketing, tecnologia, usabilidade, programação. Não precisa ser especialista
-                    em todas as áreas mas é fundamental ter uma boa noção ou contar com alguém que possa ajudar no
-                    desenvolvimento.
+                    Construir um site confiável e profissional exige uma série de conhecimentos em algumas áreas
+                    como design, comunicação, marketing, tecnologia, usabilidade, programação. Não precisa ser
+                    especialista em todas as áreas mas é fundamental ter uma boa noção ou contar com alguém que
+                    possa ajudar no desenvolvimento.
                 </p>
 
                 <p>
                     Também não existe uma receita para o sucesso, mas um conjunto de boas práticas que quando bem
-                    executadas potencializam as chances de você construir um site poderoso. E no primeiro passo, neste
+                    executadas potencializam as chances de você construir um site poderoso. E no primeiro passo,
+                    neste
                     post falaremos sobre as etapas básicas do planejamento.
                 </p>
 
@@ -43,21 +71,23 @@
 
                 <p>Definição geral e protótipo do site.</p>
 
-                <p>É uma etapa bem abrangente pois é nela que deverão ser definidos todos os aspectos do projeto e é
-                    fundamental começar respondendo algumas perguntas como:
+                <p>
+                    É uma etapa bem abrangente pois é nela que deverão ser definidos todos os aspectos do projeto e
+                    é fundamental começar respondendo algumas perguntas como:
 
                 </p>
 
                 <h4> 1. Quem vai acessar o site?</h4>
 
                 <p>
-                    Qual seria o perfil do público que estaria interessado em acessar o seu site e obter informações ou
-                    mesmo comprar seus produtos?
+                    Qual seria o perfil do público que estaria interessado em acessar o seu site e obter informações
+                    ou mesmo comprar seus produtos?
                 </p>
 
                 <p>
-                    O principal nesta etapa é conhecer e tentar entender ao máximo os possíveis usuários do seu site, o
-                    que elas fazem, qual tipo de linguagem seria mais apropriado para falar diretamente com elas?
+                    O principal nesta etapa é conhecer e tentar entender ao máximo os possíveis usuários do seu
+                    site, o que elas fazem, qual tipo de linguagem seria mais apropriado para falar diretamente com
+                    elas?
                 </p>
 
                 <p>
@@ -71,45 +101,56 @@
                     Se será um site institucional, um blog, um portal, uma loja virtual, entre outros.
                 </p>
 
-                <p>Você precisa disponibilizar apenas suas informações básicas de contato? Precisa publicar conteúdo
-                    constantemente? Precisa vender pelo site? Precisa conectar pessoas? Disponibilizar algum serviço
+                <p>
+                    Você precisa disponibilizar apenas suas informações básicas de contato? Precisa publicar
+                    conteúdo constantemente? Precisa vender pelo site? Precisa conectar pessoas? Disponibilizar
+                    algum serviço
                     online? </p>
 
                 <h4>3.Quais funcionalidades serão necessárias?</h4>
 
-                <p>Seu site precisa de quais recursos para ser relevante para seus usuários?
+                <p>
+                    Seu site precisa de quais recursos para ser relevante para seus usuários?
                 </p>
 
-                <p>Você precisará, por exemplo, de um mecanismo de busca interna, um formulário de contato, um mapa
+                <p>
+                    Você precisará, por exemplo, de um mecanismo de busca interna, um formulário de contato, um mapa
                     interativo, galeria de imagens? O ideal é levantar e classificar as referências.</p>
 
                 <h4>4. Comece a produção!</h4>
 
                 <p>Você pode começar:</p>
+
                 <ol>
 
-                    <li>1.Desenhando a estrutura do seu site na mão ou em qualquer software de produção gráfica de sua
-                        preferência.</li>
-                    <li>2.Escrevendo os textos de todas as páginas e seções do site.</li>
-                    <li>3.Pesquisar ou produzir fotos ou vídeos enriquecer o conteúdo do site.</li>
+                    <li>Desenhando a estrutura do seu site na mão ou em qualquer software de produção gráfica de
+                        sua preferência.</li>
+                    <li>Escrevendo os textos de todas as páginas e seções do site.</li>
+                    <li>Pesquisar ou produzir fotos ou vídeos enriquecer o conteúdo do site.</li>
 
                 </ol>
 
                 <p>
 
-                    Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o nosso
-                    guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu site.
+                    Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o
+                    nosso guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu
+                    site.
 
                 </p>
 
             </article>
-        </nav>
-    </section>
-    <footer>
-        <p>&copy; Prontocloud. Todos os direitos reservados.
-            <small> Desenvolvido por: César Santos</small>
-        </p>
-    </footer>
+
+        </section>
+
+        <footer>
+            <p>
+                &copy; Prontocloud. Todos os direitos reservados.
+                <small> Desenvolvido por: César Santos</small>
+            </p>
+        </footer>
+
+    </div>
+
 </body>
 
 </html>
