--- a/html/index.html
+++ b/html/index.html
@@ -37,9 +37,9 @@
             <nav>
 
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre nós</a> </li>
-                    <li><a href="#">Tenho interesse</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="newsletter.html">Sobre nós</a> </li>
+                    <li><a href="#form">Tenho interesse</a></li>
                 </ul>
 
             </nav>
@@ -144,27 +144,32 @@
                     </p>
                 </div>
             </article>
-            <article id="tenho-interesse">
-                <h1>Ficoi interessado ?</h1>
-                <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e serviços</p>
-
-                <div class="ccognito">
-                    <script src="https://www.cognitoforms.com/f/seamless.js" data-key="S7Z8xKzx-kmyd5BbhNPLjw"
-                        data-form="1"></script>
-                </div>
-
-            </article>
         </section>
+        <section id="tenho-interesse">
+            <di class="container">
+                <article>
+                    <h1>Ficoi interessado ?</h1>
+                    <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e
+                        serviços</p>
+                    <div id="form">
+                        <div class="cognito">
+                            <script src="https://www.cognitoforms.com/f/seamless.js" data-key="S7Z8xKzx-kmyd5BbhNPLjw"
+                                data-form="1"></script>
+                        </div>
 
-        <footer>
-            <div class="container">
-                <p>
-                    &copy; Prontocloud. Todos os direitos reservados.
-                    <small> Desenvolvido por: César Santos</small>
-                </p>
-            </div>
+                </article>
+            </di>
+    </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>
+                &copy; Prontocloud. Todos os direitos reservados.
+                <small> Desenvolvido por: César Santos</small>
+            </p>
+        </div>
 
-        </footer>
+    </footer>
 
     </div>
 
